--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,31 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
   </head>
   <body>
-    <!--Nav Menu-->
+    <!-- Nav Menu-->
     <div>
-      <a href="link">Home</a>
-      <a href="aboutme.html">About Me</a>
-      <a href="link">Contact</a>
+      <nav class="main-navigation">
+        <a href="index.html" class="logo">MK</a>
+        <ul class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutme.html">About</a></li>
+          <li class="menu-item-has-children">
+            <a href="#">Outcome</a>
+            <ul class="sub-menu">
+              <li><a href="unit-1.html">Unit-1</a></li>
+              <li><a href="unit-2.html">Unit-2</a></li>
+            </ul>
+          </li>
+          <li class="menu-item-has-children">
+            <a href="#">Review</a>
+            <ul class="sub-menu">
+              <li><a href="Review-1.html">Outcome 1</a></li>
+              <li><a href="Review-2.html">Outcome 2</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </div>
+    <!-- end nav-->
 
     <!-- Heading -->
     <h1>Contact</h1>
