--- a/unit-2.html
+++ b/unit-2.html
@@ -4,28 +4,132 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Outcome - Unit 2</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <!-- Font Awsome Library-->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <!--Nav Menu-->
+    <!-- Nav Menu-->
     <div>
-      <a href="index.html">Home</a>
-      <a href="aboutme.html">About Me</a>
-      <div>
-        <button>Outcome</button>
-        <div>
-          <a href="unit-1.html">Unit 1</a>
-          <a href="unit-2.html">Unit 2</a>
-        </div>
-      </div>
-      <a href="contact.html">Contact</a>
+      <nav class="main-navigation">
+        <a href="index.html" class="logo">MK</a>
+        <ul class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutme.html">About</a></li>
+          <li class="menu-item-has-children">
+            <a href="#">Outcome</a>
+            <ul class="sub-menu">
+              <li><a href="unit-1.html">Unit-1</a></li>
+              <li><a href="unit-2.html">Unit-2</a></li>
+            </ul>
+          </li>
+          <li class="menu-item-has-children">
+            <a href="#">Review</a>
+            <ul class="sub-menu">
+              <li><a href="Review-1.html">Unit-1 Outcome 2</a></li>
+              <li><a href="Review-2.html">Unit-1 Outcome 3</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- end nav-->
+
+    <!-- Header-->
+    <div class="banner">
+      <h1 class="header-text square-bg">
+        Unit 2: Website Software
+      </h1>
     </div>
 
     <!--content-->
+    <h2>
+      1.1 Describing the content and layout for each page
+    </h2>
 
-    <!-- footer -->
-    <div>
-      <p>Copyright 2020</p>
-    </div>
+    <p>
+      The website I have developed has a variety of content. There are 6 pages
+      linked to the website. The Index page contains a logo situated at the top
+      alongside the navigation bar linking it to different pages on the website.
+      The navigation bar is displayed on above all of the web pages. It has a
+      drop down menu linking to unit 1 and unit 2 outcome pages. The index page
+      consists of h1 text and a button element with a gradient background which
+      links to the about me page. The about me page contains a h1 element with a
+      background image which includes content with regards to myself and has two
+      images such as an illustration of a person working on his laptop
+      displaying that he is coding and a codenation logo.
+    </p>
+    <p>
+      The unit 1 and 2 outcome pages include content referring to various
+      content with regards to IT solution, software developing and how I formed
+      my website. The review page contains information with regards to the
+      evaluation of how I designed the website, identifying strengths and
+      weaknesses. The final page refers to references that I used within my
+      portfolio. There are social media icons located on the footer of each
+      page. I have used a variety of colours and fonts to enhance the appearance
+      of my website.
+    </p>
+
+    <h2>1.5 Describing copyright and other constraints affecting websites</h2>
+
+    <p>
+      There are many constraints affecting websites. One constraint is known as
+      Copyright. This is defined as the right given to a creator who has
+      produced an original content or product. The individual who has created
+      that content has the rights to reproduce, display or sell copies of the
+      work to other people. Trademarks are another constraint as companies can
+      register and protect their brand by law from being used by other
+      individuals/companies without their consent.
+    </p>
+    <p>
+      constraints are visible on websites as when content is placed online
+      especially on private domains, individuals are not entitled to use that
+      content for personal or business use without their permission. It is
+      always best practice to ask for permission from original authors when
+      using their content. However, there are royalty free content that
+      individuals can freely use for their work on their website which may
+      require referencing the original creator.
+    </p>
+
+    <h2>
+      1.6 Describing access issues that need taking into account - describe
+      issues that people with disabilities may face when using web pages and how
+      we can overcome them
+    </h2>
+    <p>
+      There are many access issues that need to be taken into consideration when
+      developing a website for people with disability. If someone with a vision
+      impairment accesses a website they may have difficulty looking and
+      understanding the information provided. In order to overcome this, it is
+      beneficial to use alt tags. Disabled individuals tend to use a screen
+      reader which reads text on a website, and therefore alt tags allow images
+      to contain words which are read aloud. Another important disability to
+      take into account when designing web pages are colorblind users. They find
+      it difficult to view certain colours, therefore practicing smart color
+      choices is essential for a website with a wide audience. To overcome this,
+      it will be beneficial to use black text on a white background as this will
+      be readable for most users.
+    </p>
+
+    <h2>
+      1.7 Describe which are the appropriate file types for websites
+    </h2>
+
+    <p>
+      There are many files that can be used for websites. The most common one is
+      HTML which is used for structuring web pages. Another common file type
+      that is used is CSS. This is mainly used for styling of the web page as it
+      allows the creator to use different colours, fonts and layouts. Javascript
+      is a popular file type, it is essential for changing the behaviour of the
+      web page. It allows interactive use on the website. Choosing the right
+      file format to save images is essential. This can be done by using PNG and
+      JPeg files. This allows a small but effective fast loading graphics. It
+      supports advanced features such as a 24 bit colour support which supports
+      alpha channel transparency.
+    </p>
   </body>
 </html>
