--- a/index.html
+++ b/index.html
@@ -4,33 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web | MK</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <!-- Font Awsome Library-->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <!--Responsive Nav Menu-->
-    <div class="container">
-      <nav>
+    <!-- Nav Menu-->
+    <div>
+      <nav class="main-navigation">
         <a href="index.html" class="logo">MK</a>
-        <ul>
+        <ul class="menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="#">Outcome</a></li>
-          <li><a href="review.html">Review</a></li>
-          <li><a href="reference.html">Reference</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="aboutme.html">About</a></li>
+          <li class="menu-item-has-children">
+            <a href="#">Outcome</a>
+            <ul class="sub-menu">
+              <li><a href="unit-1.html">Unit-1</a></li>
+              <li><a href="unit-2.html">Unit-2</a></li>
+            </ul>
+          </li>
+          <li class="menu-item-has-children">
+            <a href="#">Review</a>
+            <ul class="sub-menu">
+              <li><a href="Review-1.html">Unit-1 Outcome 2</a></li>
+              <li><a href="Review-2.html">Unit-1 Outcome 3</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
-      <!-- hero content-->
-      <section id="hero">
-        <div class="hero-text">
-          <h1>Welcome</h1>
-          <a href="index.html" class="button">Find out More</a>
-        </div>
+    </div>
+    <!-- end nav-->
 
-        <div class="hero-class">
-          <img src="/images/rocket.png" alt="welcome" />
+    <!-- Content -->
+    <div class="container">
+      <div class="row">
+        <div class="column">
+          <div class="main-text">
+            <h1>WELCOME</h1>
+            <a href="aboutme.html" class="button">CLICK ME</a>
+          </div>
         </div>
-      </section>
+        <div class="column">
+          <img src="images/guy.png" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
